typos and conclusions added

--- a/chapter_conclusions.tex
+++ b/chapter_conclusions.tex
@@ -1,23 +1,41 @@
 \chapter{Conclusions and outlook}
-%The description of a~\gls{tmh} remains incomplete.
-%The understanding of~\gls{tmp} topology is erroneous, and despite a wealth of structures, the general model of helix-helix and helix-lipid interactions remains speculative and requires a great deal of intensive analysis to generate a working model of a particular~\gls{tmp}.
+
 \sloppy
 As the idea of positive residues inside the cytoplasm emerged during the late 1980s, so did the idea of negative residues working in concert with~\gls{tmh} orientation.
-It was shown that removing a single lysine residue reversed the topology of a model \textit{erichia coli} protein, whereas much higher numbers of negatively charged residues are needed to reverse topology~\cite{Nilsson1990}.
-One would also expect to see a skew in negatively charged distribution if a cooperation between oppositely charged residues orientated a~\gls{tmh}, however there is no conclusive evidence in the literature for an opposing negatively charged skew~\cite{Granseth2005, Nilsson2005a, Sharpe2010, Baeza-Delgado2013, Pogozheva2013}.
-However, in \textit{E.
-coli} negative residues do experience electrical pulling forces when travelling through the SecYEG translocon indicating that negative charges are biologically relevant~\cite{Ismail2015}.
-In this chapter, we explore the literature surrounding charged residue distribution in the~\gls{tmh}, and demonstrate that the ``negative-outside'' skew exists in anchoring~\gls{tmh}s
-In this thesis we ellucidated the ``negative\--outside'' rule.
-Additionally we have made observations regarding how anchoring \gls{tmh}s are optimised to their membranes.
-This new insight into the bahviour of \gls{tmh}s will not only help us understand specific case in biology, but can also inform synthetic biology regarding \gls{tmp}s.
+It was shown that removing a single lysine residue reversed the topology of a model \textit{E. coli} protein, whereas much higher numbers of negatively charged residues are needed to reverse topology~\cite{Nilsson1990}.
+One would also expect to see a skew in negatively charged distribution if a cooperation between oppositely charged residues orientated a~\gls{tmh}, however, there was no conclusive evidence in the literature for an opposing negatively charged skew~\cite{Granseth2005, Nilsson2005a, Sharpe2010, Baeza-Delgado2013, Pogozheva2013}.
+However, in \textit{E. coli} negative residues do experience electrical pulling forces when travelling through the SecYEG translocon indicating that negative charges are biologically relevant~\cite{Ismail2015}.
+In this thesis, we demonstrate that the ``negative\--outside'' skew exists in anchoring~\gls{tmh}s.
+Additionally, we have made observations regarding how anchoring \gls{tmh}s are optimised to their membranes.
+This new insight into the behaviour of \gls{tmh}s will not only help us understand specific cases in biology, but can also inform synthetic biology regarding \gls{tmp}s.
 
-With respect to \gls{ta} \gls{tmp}s, we found differences between the mitochondrial and secretory dedtermined \gls{tmh}s.
-We found alanine is used more commonly in the mitochondrial \gls{tmh}s, perhaps even moreso than isoleucine and leucine.
+Post\--translationally inserted \gls{ta} proteins integrate into the membrane independently of the co\--translational ribosome\--translocon complex insertion machinery.
+They are also of interest as a liposome drug delivery system due to the role of \gls{ta} \gls{snare} proteins in membrane fusion \cite{Ungar2003, Allen2013, Nordlund2014}.
+We found differences between the mitochondrial and secretory determined \gls{tmh}s.
+We found alanine is used more commonly in the mitochondrial \gls{tmh}s, perhaps even more so than isoleucine and leucine.
 We also observed a reversal of the positive\--inside negative\--outside distributions of charged residues.
 This re\--emphasises the notion that there is more to \gls{ta} protein trafficking than the hydrophobicity of the \gls{tmh} alone, and could inform more specific studies of individual proteins.
-%\gls{ta} proteins in drug delivery
-However, in order to reach more thorough conclusions at a molecular level, more annotation is needed in the databases regarding chaperone interactions, and a more precise terminology of what constitutes a post translationally inserted \gls{ta} protein.
+Still, several important questions remain unanswered that limit our understanding of \gls{ta} protein biosynthesis.
+How truly redundant are the different pathways?
+Hydrophobicity alone does not determine the biosynthesis pathway and charge is clearly not an absolute determinant besides that \cite{Guna2018}; what are the biophysical signatures of \gls{ta} proteins that determine their path?
+Why do some post-translationally inserted \gls{ta} proteins have C-terminal tail lengths exceeding the traditional 25 residue length, whereas other proteins with far shorter tails than this cut-off are co-translationally inserted?
+Ultimately, for these questions to be more thoroughly answered, as we have demonstrated, annotation of the protein databases must be completed.
 
-Understanding cooperative \gls{tmh} insertion and the integration of marginally hydrophobic \gls{tmh}s will require a much more thorough understanding of the temporal aspects of the process. %EM and appears
+Whilst we have identified amphipathic \gls{tmh}s that may contribute to the spontaneous insertion of some \gls{ta} proteins, \gls{md} simulations of the interactions between the membrane and the anchoring \gls{tmh} of spontaneously inserting \gls{ta} proteins would be needed to reveal the molecular energetic contributions involved in the spontaneous insertion.
+
+
+The biological scale of hydrophobicity revealed that many \gls{tmh}s do not make the energetic requirements of insertion by the translocon \cite{Hessa2007}.
+It is now understood that these so\--called marginally hydrophobic \gls{tmh}s rely on sequence context for correct topology \cite{Ojemalm2012} and efficient insertion \cite{Hedin2010, Junne2017, Virkki2014}.
+Here we show that marginally hydrophobic \gls{tmh}s located sequentially adjacent to typically hydrophobic \gls{tmh}s is a conserved feature throughout some families of \gls{tmp} such as ion channels and \gls{gpcr}s.
+In these two cases, there is evidence demonstrating that these hydrophobic discrepancy pairs are capable of inserting cooperatively \cite{Ismail2008, Zhang2007, Sato2002, Sato2003, Cymer2015}.
+It remains unclear as to what extent the newly discovered role of the \gls{emc} integration of marginally hydrophobic \gls{tmh}s \cite{Shurtleff2018} works in respect to cooperatively inserted \gls{tmh}s.
+
+Understanding cooperative \gls{tmh} insertion and the integration of marginally hydrophobic \gls{tmh}s will require a much more thorough understanding of the temporal and energetic aspects of the process.
+It appears that the relatively new technologies of single molecule \gls{em} and \gls{ap}s may be able to grant insight into the energetics and spacial structures throughout the process of \gls{tmp} integration.%EM and appears
 However, understanding the relationship \gls{tmh}s have with one another is critical for developing complex synthetic \gls{tmp}s.
+
+More generally, there are several challenges still facing our understanding of \gls{tmp}s.
+The description of a~\gls{tmh} remains incomplete; it remains difficult to interpret the role of a \gls{tmh} in the membrane beyond anchoring.
+Furthermore, the prediction of~\gls{tmp} topology is often erroneous and requires experimental validation.
+Despite a wealth of structures the general model of helix\--helix and helix\--lipid interactions remains speculative and requires intensive analysis to generate a working model of a particular~\gls{tmp}.
+Nevertheless, progress is being made in our general understanding of \gls{tmp}s.
