--- a/chapter_introduction.tex
+++ b/chapter_introduction.tex
@@ -203,7 +203,7 @@ Often these are represented as a polar head group with two fatty chains extendin
 %At some point the membrane phases should be discussed.
 %Similar to the diagram here perhaps: http://popups.ulg.ac.be/1780-4507/index.php?id=6568
 
-It has been known for some time that biological bi\--layer membranes are asymmetric~\cite{Singer1972, OpdenKamp1979}.
+It has been known for almost 4 decades that biological bi\--layer membranes are asymmetric~\cite{Singer1972, OpdenKamp1979}.
 For example, in the outer membranes of Gram-negative bacteria, the outer membrane leaflet contains lipopolysaccharide, whilst the inner is a mixture of approximately 25 phospholipid types~\cite{VanMeer2008}.
 Adding to the membrane asymmetry composition story, a thorough analysis of residue composition in yeast and human \gls{tmh} regions revealed intra-membrane leaflet composition asymmetry in the \gls{er}, but not the Golgi~\cite{Sharpe2010}.
 Furthermore, protein-lipid interactions have been shown to be determinants of membrane curvature~\cite{Jensen2004}, and undertake complex orientations and conformations to allow for hydrophobic mismatch~\cite{Planque2003}.
@@ -268,20 +268,20 @@ The language used to describe \gls{tmh}s varies somewhat across the literature, 
 There is a general composition of a \gls{tmh} despite specific protein and membrane constraints~\cite{Sharpe2010}.
 
 %This paragraph should certainly be changed to the updated one from the manuscript.
-A study by Baeza\---Delgado \textit{ et al.} from 2013~\cite{Baeza-Delgado2013} looked at \gls{tmh}s in 170 integral membrane proteins from a manually maintained database of experimentally confirmed \gls{tmp}s; MPTopo~\cite{Jayasinghe2001}.
+A study by Baeza\---Delgado \textit{ et al.} from 2013~\cite{Baeza-Delgado2013} looked at \gls{tmh}s with known topology and structure in 170 integral membrane proteins from a manually maintained database of experimentally confirmed \gls{tmp}s; MPTopo~\cite{Jayasinghe2001}.
 The group examined the distribution of residues along the \gls{tmh}s.
-As expected, half of the natural amino acids are equally distributed along transmembrane (TM) helices whereas aromatic, polar, and charged amino acids along with proline are biasedly near the flanks of the TM helices~\cite{Baeza-Delgado2013}.
+As expected, half of the natural amino acids are equally distributed along transmembrane \gls{tmh}s whereas aromatic, polar, and charged amino acids along with proline are biasedly near the flanks of the \gls{tmh}s~\cite{Baeza-Delgado2013}.
 It has been noted that transitions between the polar and non-polar groups at the ends of the hydrophobic core occur in a more defined edge on the cytoplasmic side than at the extracytoplasmic face when counting from the middle of the helix outwards~\cite{Baeza-Delgado2013}.
 This is probably reflecting the different lipid composition of both leaflets of biological membranes~\cite{Baeza-Delgado2013}.
 
 A previous study by Sharpe \textit{et al.} from 2010 used 1192 human and 1119 yeast predicted \gls{tmh}s that were not structurally validated to further explore the difference in \gls{tmh} and leaflet structure by exploiting the evolutionarily conserved sequence differences between the \gls{tmh} in the inner and outer leaflets~\cite{Sharpe2010}.
-\gls{tmh}s from vertebrates and invertebrates were found to be reasonably similar compositionally.
+%\gls{tmh}s from vertebrates and invertebrates were found to be reasonably similar compositionally.
 The differences in consensus \gls{tmh} structure implies that there are general differences between the membranes of the Golgi and \gls{er}.
 The abundance of serines in the region following the lumenal end of Golgi \gls{tms}s probably reflects the fact that this part of many Golgi enzymes forms a flexible linker that tethers the catalytic domain to the membrane~\cite{Sharpe2010}.
 
 \subsubsection{The ``positive\--inside'' rule}
 
-Two publications by von Heijne coined the ``Positive-Inside'' rule demonstrated the practical value of positively charged residue sequence clustering in topology prediction of \gls{tmh}s in bacteria~\cite{VonHeijne1989,Andersson1992}.
+Two publications by von Heijne coined the ``positive-inside'' rule demonstrated the practical value of positively charged residue sequence clustering in topology prediction of \gls{tmh}s in bacteria~\cite{VonHeijne1989,Andersson1992}.
 It was clearly defined and shown that positively charged residues more commonly were found on the ``inside'' of the cytoplasm rather than the periplasm of \textit{ E.
 coli}.
 More recently still large-scale sequence analysis of \gls{tmh}s from different organelle membrane surfaces in eukaryotic proteomes, show the clustering of positive charge being cytosolic~\cite{Sharpe2010, Baeza-Delgado2013, Pogozheva2013}.
@@ -292,16 +292,14 @@ Tyrosine and tryptophan residues commonly are found at the interface boundaries 
 Not all aromatic residues are not found in the aromatic belt; phenylalanine has no particular preference for this region~\cite{Granseth2005, Braun1999}.
 However, it still remains unclear if this is to do with anchoring or translocon recognition~\cite{Baeza-Delgado2013}.
 
-A study of conserved tryptophan residues during folding of integrin $\alpha$II$\beta$3 \gls{tm} complex demonstrated the anchoring effects of tryptophan (0.4 kcal/mol contribution to membrane stability) in \gls{tmh}s is greater than the other residues~\cite{Situ2018}. It was suggested that it's wide amphiphilic range (it's stabilising energetic contribution in either hydrophobic or polar sites) complements the heterogeneity and asymmetry of mammalian membrane lipids in particular.
+A study of conserved tryptophan residues during folding of integrin $\alpha$II$\beta$3 \gls{tm} complex demonstrated the anchoring effects of tryptophan (0.4 kcal/mol contribution to membrane stability) in \gls{tmh}s is greater than the other residues~\cite{Situ2018}. It was suggested that the wide amphiphilic range (the stabilising energetic contribution in either hydrophobic or polar sites) of tryptophan complements the heterogeneity and asymmetry of mammalian membrane lipids in particular.
 
-The tyrosine side chain is a six-membered aromatic ring with an –OH group attached.
-Tryptophan has two aromatic rings that are fused into one large hydrophobic ring-structure.
-Phenylalanine, although aromatic, is completely hydrophobic, and is found in the transmembrane part rather than the interfacial parts of \gls{tmh}s.
-The classical explanation for the preference of tyrosine and tryptophan to reside in the interfacial regions is their dipolar character.
-The side chain must simply seek compromise.
-This can be achieved by burying the aromatic ring close to, or within, the hydrophobic core, while the hydrophilic part can interact with the polar lipid head-groups at the interface.
-Other factors such as the aromaticity, size, rigidity and shape of tryptophan, rather than its dipolar character, has also been suggested as the primary reasons for its interfacial preference.
-%Perhaps, as suggested by You \textit{et al.}, it is a balance of all these forces that explains the interfacial preference of Tyrosine and Tryptophan. %This NEEDS referencing!
+The tyrosine side chain is a 6\--carbon aromatic ring with an OH group attached.
+Tryptophan has two aromatic rings that contribute to a large hydrophobic ring-structure.
+Phenylalanine, although aromatic, is hydrophobic, and unlike tyrosine and tryptophan is typically found in the transmembrane part rather than the interfacial parts of \gls{tmh}s.
+The aromatic rings of tryptophan and tyrosine are buried close to, or within, the hydrophobic core, while the hydrophilic portion can interact with the polar lipid head\--groups at the interface between the lipids and the water environment.
+Other factors such as the aromaticity, size, rigidity and shape of tryptophan, rather than its dipolar character, has also been suggested as the primary reasons for its interfacial preference and indeed interfacial localisation preference could be the result of a combination of all of these factors \cite{Yau1998}.
+
 
 \subsubsection{Snorkelling}
 
@@ -423,7 +421,8 @@ Broadly speaking, the information theory entropy of a linguistic string can be d
 
 Where H is the entropy of a sequence (S), and $p_i$ is the probability of a character $i$ through each position (n) in S. This allows us to quantify the average relative information density held within a string of information~\cite{Shannon1948}.
 
-The compositional complexity is measured over sequence windows. If we have an amino acid composition $\{{{n}_{i}}{\}}_{i}={\min{i}},\ldots,{\max{i}}$ with a window length of $L=\Sigma {n}_i $, the total number of sequences can be calculated by dividing a factorial of the length by the product of the compositions, i.e\  $ N = L!/\Pi{n}_i $ possible sequences.
+%The compositional complexity is measured over sequence windows.
+%The total number of sequences can be calculated by dividing a factorial of the length by the product of the compositions, i.e\  $ N = L!/\Pi{n}_i $ possible sequences given an amino acid composition $\{{{n}_{i}}{\}}_{i}={\min{i}},\ldots,{\max{i}}$ with a window length of $L=\Sigma {n}_i $. 
 The SEG algorithm~\cite{WOOTTON1994269, Wootton1996} identifies sub-segments of the raw region which have the lowest probability.
 The algorithm searches for and concatenates sub-threshold segments for the Shannon entropy-like term in equation~\ref{shannonentropyliketerm}
 
