--- a/chapter_tailanchor.tex
+++ b/chapter_tailanchor.tex
@@ -5,7 +5,7 @@
 
 \section{Abstract}
 
-Tail\--anchored proteins are a functionally diverse group of post\--translationally inserted membrane proteins that have a cytosolic N-terminal, a transmembrane $\alpha$ helix, and a short C\--terminal tail.
+Tail\--anchored proteins are a functionally diverse group of post\--translationally inserted membrane proteins that have a cytosolic N\--terminal, a transmembrane $\alpha$ helix, and a short C\--terminal tail.
 The transmembrane helix and flanking regions of the tail\--anchored protein have been shown to contain sufficient information for subcellular targeting.
 Here, we built datasets based on sequence definitions of plausible tail\--anchored proteins using the  UniProt database.
 We show that any statistical differences between the hydrophobicity of the transmembrane helix between tail\--anchored proteins belonging to mammalian, plant, or yeast organisms are, if at all present, small.
@@ -35,9 +35,10 @@ Furthermore, the hydrophobicity appears to be a determining factor in the delive
         \captionof{figure}[An overview of the biogenesis of tail-anchored proteins.]{\textbf{An overview of the biogenesis of tail-anchored proteins.}
 
         (i) The intensively studied Get (yeast) or TRC40 (mammalian) pathway can target either for membrane integration or degradation of the \gls{ta} protein.
+        Text in brackets indicates mammalian proteins.
         (ii) In yeast, a novel mechanism was identified in which Snd1 binds to the folded \gls{ta} protein and delivers it to the membrane\--bound Snd2 and Snd3 complex.
         (iii) \gls{srp} of the co-translational insertion mechanism has been shown to be able to integrate \gls{ta} proteins. Sec61s role in this is disputed, and it is likely other proteins are involved in membrane partitioning instead.
-        (iv) A recently identified insertase, the EMC, can integrate \gls{ta} proteins with relatively polar \gls{tmh}s into the \gls{er}.
+        (iv) A recently identified insertase, the \gls{emc}, can integrate \gls{ta} proteins with relatively polar \gls{tmh}s into the \gls{er}.
         (v) A handful of \gls{ta} proteins with relatively polar \gls{tmh} regions have been observed spontaneously integrating into the membrane using Hsp40 and Hsc70 as chaperones.
         This system may be employed for mitochondrial localisation.
         (vi) Peroxisomal proteins with an abundance of charge in the tail region are chaperoned by Pex19 into association with the membrane\--bound Pex3.
@@ -783,9 +784,3 @@ We could not find any clear trends or perform statistical work on the chaperone 
 Furthermore, the spontaneously inserting \gls{ta} proteins PTP1b and cytochrome b5 appear to share a polar face that emerges in structural models and a strong ``positive\--inside'' ``negative\--outside'' electrostatic surface.
 The polar face may be responsible for the promotion insertion potential in the absence of insertion proteins since when the sequence is scrambled, the insertion potential is reduced \cite{Brambillasca2006}.
 The positively and negatively charged residues are distributed like an ideal anchoring \gls{tmh} \cite{Baker2017} which could allow the marginally hydrophobic \gls{tmh} to perform as a suitable membrane anchoring feature.
-
-%Still, several important questions remain unanswered that limit our understanding of \gls{ta} protein biogenesis.
-%How truly redundant are the different pathways?
-%Hydrophobicity alone does not determine biogenesis pathway and charge is clearly not an absolute determinant besides that; what are the biophysical signatures of \gls{ta} proteins that determine their path?
-%Why do some post-translationally inserted \gls{ta} proteins have C-terminal tail lengths exceding the traditional 25 residue length, whereas other proteins with far shorter tails than this cut-off are co-translationally inserted?
-%Ultimately, for these questions to be more thoroughly answered, as we have demonstrated, annotation of the protein databases must be completed. Currently there is no way to probe if a protein is post-translationally inserted or co-translationally inserted.
