--- a/references.bib
+++ b/references.bib
@@ -384,10 +384,14 @@ urldate = {2018-08-22},
 year = {2018}
 }
 @article{Lonsdale1928,
-author = {Nature, K Lonsdale - and 1928, Undefined},
-journal = {nature.com},
-title = {{The structure of the benzene ring}},
-url = {https://www.nature.com/articles/122810c0}
+author = {Lonsdale, K.},
+journal = {Nature},
+keywords = {DNA,Nature,RNA,astronomy,astrophysics,biochemistry,bioinformatics,biology,biotechnology,cancer,cell cycle,cell signalling,climate change,computational biology,development,developmental biology,drug discovery,earth science,ecology,environmental science,evolution,evolutionary biology,functional genomics,genetics,genomics,geophysics,immunology,interdisciplinary science,life,marine biology,materials science,medical research,medicine,metabolomics,molecular biology,molecular interactions,nanotechnology,neurobiology,neuroscience,palaeobiology,pharmacology,physics,proteomics,quantum physics,science,science news,science policy,signal transduction,structural biology,systems biology,transcriptomics},
+pages = {810},
+title = {{The Structure of the Benzene Ring : Abstract : Nature}},
+url = {https://www.nature.com/articles/122810c0},
+volume = {122},
+year = {1928}
 }
 @article{Dickinson1923,
 author = {Dickinson, Roscoe G. and Raymond, Albert L.},
