--- a/thesis.tex
+++ b/thesis.tex
@@ -94,18 +94,24 @@
 
 
 \prefacesection{Abstract}
-Non\---polar helices figure prominently in structural biology, from the first protein structure (myoglobin) through transmembrane segments, to current work on recognition of protein trafficking and quality control.
-Transmembrane \(\alpha\) helix containing proteins make around a quarter of all proteins, and represent around 40\% of drug targets, and contain some of the most critical proteins required for life as we know it.
-Yet they are fundamentally difficult to study experimentally. This is in part due to the very features that make them so biologically influential: their non\---polar transmembrane helix regions.
-What is missing in the current literature is a nuanced contextualised understanding of the complexities of the helix composition beyond a hydrophobic region of around 20 residues.
+Non\---polar helices feature prominently in structural biology.
+Transmembrane \(\alpha\) helix containing proteins make up around a quarter of all proteins, represent around 40\% of drug targets, and contain some of the most critical proteins required for life as we know it.
+Yet they are fundamentally difficult to study experimentally.
+This is in part due to the very features that make them so biologically influential; their non\---polar transmembrane helical regions.
 
-By leveraging large data-sets of transmembrane proteins, this thesis is focused on characterising features of \(\alpha\) helices en masse, particularly regarding their topology, membrane\---protein interactions, and intramembrane protein interactions.
+By leveraging large data-sets of transmembrane proteins, this thesis is focused on characterising features of transmembrane \(\alpha\) helices en masse, particularly regarding their topology, membrane\---protein interactions, and intramembrane protein interactions.
 
-In this thesis we present statistical evidence demonstrating the ``negative\--outside rule'' in opposition to the ``positive\--inside rule''.
-We identify different amino acid distributions in anchoring helices compared to transmembrane helices with function beyond anchoring that would allow anchroing transmembrane helices to stabilise more effectively in the membrane.
-We show adaptations of residue distributions through the transmembrane helices of tail\--anchored proteins to different membrane environments.
-Structural modeeling well as a 3D amphipathic arrangement of residues of spontaneously inserting transmembrane helices that may be responsible for their insertion.
-Finally, we find a conserved pattern of typically hydrophobic transmembrane helices neighbouring margainlly hydrophobic helices which may facilitate their insertion.
+In this study, we present statistical evidence demonstrating the ``negative\--outside'' rule in opposition to the ``positive\--inside'' rule.
+We also identify stabilising amino acid distributions in anchoring transmembrane helices compared to transmembrane helices with function beyond anchoring.
+
+Tail\--anchored proteins are a group of post\--translationally inserting proteins.
+In this thesis we show adaptations of residue distributions through the transmembrane helices of tail\--anchored proteins to different membrane environments within the cell (the mitochondria, endoplasmic reticulum, the Golgi, and the plasma membrane), but could not scrutinise a difference between global populations of tail\--anchored proteins in species (mammals, plants, and fungi).
+A handful of these proteins are capable of integrating into the membrane without the need for membrane integration proteins.
+Structural modelling of transmembrane helices from PTP1b and cytochrome b5 reveals a 3D amphipathic arrangement of residues.
+This structural feature may play a role in their spontaneous membrane insertion.
+
+Finally, we find a conserved pattern of typically hydrophobic transmembrane helices neighbouring marginally hydrophobic helices in some families of transmembrane proteins.
+This feature corresponds to transmembrane helices that have the potential to cooperate in order to integrate the more polar, but functionally important, transmembrane helix of the pair into the membrane.
 
 
 \prefacesection{Lay Abstract} %The lay abstract section is optional.
