--- a/chapter_conclusions.tex
+++ b/chapter_conclusions.tex
@@ -3,21 +3,22 @@
 \sloppy
 As the idea of positive residues inside the cytoplasm emerged during the late 1980s, so did the idea of negative residues working in concert with~\gls{tmh} orientation.
 It was shown that removing a single lysine residue reversed the topology of a model \textit{E. coli} protein, whereas much higher numbers of negatively charged residues are needed to reverse topology~\cite{Nilsson1990}.
-One would also expect to see a skew in negatively charged distribution if a cooperation between oppositely charged residues orientated a~\gls{tmh}, however, there was no conclusive evidence in the literature for an opposing negatively charged skew~\cite{Granseth2005, Nilsson2005a, Sharpe2010, Baeza-Delgado2013, Pogozheva2013}.
-However, in \textit{E. coli} negative residues do experience electrical pulling forces when travelling through the SecYEG translocon indicating that negative charges are biologically relevant~\cite{Ismail2015}.
-In this thesis, we demonstrate that the ``negative\--outside'' skew exists in anchoring~\gls{tmh}s.
+Furthermore, there was no conclusive evidence in the literature for an opposing negatively charged skew~\cite{Granseth2005, Nilsson2005a, Sharpe2010, Baeza-Delgado2013, Pogozheva2013}.
+Yet these previous studies in various ways did not account for the rarity of the negatively charged residues relative to the more abundant residues.
+In \textit{E. coli} negative residues do experience electrical pulling forces when travelling through the SecYEG translocon indicating that negative charges are biologically relevant~\cite{Ismail2015}, and as mentioned, they did to an extent have the ability to reverse topology \cite{Nilsson1990}.
+In this thesis, we have demonstrated that the ``negative\--outside'' skew exists in anchoring~\gls{tmh}s.
 Additionally, we have made observations regarding how anchoring \gls{tmh}s are optimised to their membranes.
 This new insight into the behaviour of \gls{tmh}s will not only help us understand specific cases in biology, but can also inform synthetic biology regarding \gls{tmp}s.
 
 Post\--translationally inserted \gls{ta} proteins integrate into the membrane independently of the co\--translational ribosome\--translocon complex insertion machinery.
 They are also of interest as a liposome drug delivery system due to the role of \gls{ta} \gls{snare} proteins in membrane fusion \cite{Ungar2003, Allen2013, Nordlund2014}.
-We found differences between the mitochondrial and secretory determined \gls{tmh}s.
-We found alanine is used more commonly in the mitochondrial \gls{tmh}s, perhaps even more so than isoleucine and leucine.
-We also observed a reversal of the positive\--inside negative\--outside distributions of charged residues.
-This re\--emphasises the notion that there is more to \gls{ta} protein trafficking than the hydrophobicity of the \gls{tmh} alone, and could inform more specific studies of individual proteins.
+We found compositional differences between the mitochondrial and secretory localised \gls{tmh}s of \gls{ta} proteins.
+Alanine is used more commonly in the mitochondrial \gls{tmh}s, perhaps even more so than isoleucine and leucine.
+We also observed a reversal of the positive\--inside and negative\--outside distributions of charged \gls{tmh} flanking residues in mitochondrially localised \gls{ta} proteins.
+This re\--emphasises the notion that there is more to \gls{ta} protein trafficking than the hydrophobicity of the \gls{tmh} alone \cite{Guna2018}, and could inform more specific studies of individual proteins.
 Still, several important questions remain unanswered that limit our understanding of \gls{ta} protein biosynthesis.
 How truly redundant are the different pathways?
-Hydrophobicity alone does not determine the biosynthesis pathway and charge is clearly not an absolute determinant besides that \cite{Guna2018}; what are the biophysical signatures of \gls{ta} proteins that determine their path?
+What are the precise biophysical and biological signatures of \gls{ta} proteins that determine their path?
 Why do some post-translationally inserted \gls{ta} proteins have C-terminal tail lengths exceeding the traditional 25 residue length, whereas other proteins with far shorter tails than this cut-off are co-translationally inserted?
 Ultimately, for these questions to be more thoroughly answered, as we have demonstrated, annotation of the protein databases must be completed.
 
@@ -31,8 +32,8 @@ In these two cases, there is evidence demonstrating that these hydrophobic discr
 It remains unclear as to what extent the newly discovered role of the \gls{emc} integration of marginally hydrophobic \gls{tmh}s \cite{Shurtleff2018} works in respect to cooperatively inserted \gls{tmh}s.
 
 Understanding cooperative \gls{tmh} insertion and the integration of marginally hydrophobic \gls{tmh}s will require a much more thorough understanding of the temporal and energetic aspects of the process.
-It appears that the relatively new technologies of single molecule \gls{em} and \gls{ap}s may be able to grant insight into the energetics and spacial structures throughout the process of \gls{tmp} integration.%EM and appears
-However, understanding the relationship \gls{tmh}s have with one another is critical for developing complex synthetic \gls{tmp}s.
+It appears that the relatively new technologies of single molecule \gls{em} and \gls{ap}s may be able to grant insight into the energetics and dynamics of the structures throughout the process of \gls{tmp} integration.
+Understanding the relationship \gls{tmh}s have with one another is critical for developing complex synthetic \gls{tmp}s.
 
 More generally, there are several challenges still facing our understanding of \gls{tmp}s.
 The description of a~\gls{tmh} remains incomplete; it remains difficult to interpret the role of a \gls{tmh} in the membrane beyond anchoring.
